--- a/snippet/example.html
+++ b/snippet/example.html
@@ -7,14 +7,20 @@
   <title>Example Emojion site | THE HEAP</title>
 
   <style type="text/css">
-    section {
-      width: 1024px;
-      margin: 0 auto;
+    body {
+      font-family: sans-serif;
+      font-size: 16px;
     }
 
-    section p {
-      font: sans-serif;
-      font-size: 15px;
+    .wrapper {
+      margin: 0 auto;
+      padding: 0 2.5%;
+      max-width: 1024px;
+    }
+
+    section {
+      width: 100%;
+      margin: 0 auto;
     }
 
     .comment {
@@ -23,42 +29,44 @@
       position: relative;
       background: #efefef;
     }
-    
+
     .comment:after {
-      content: "";    
-      display: block;          
+      content: "";
+      display: block;
       position: absolute;
       top: -13px;
       left: 50px;
       width: 0;
       border-width: 0 15px 15px;
-      border-style: solid;                                                    
+      border-style: solid;
       border-color: #efefef transparent;
     }
   </style>
 </head>
 
 <body>
-  <section class="header">
-    <h1>Emojions Example Supa-site!</h1>
-  </section>
-  <section class="article">
-    <h3>Article Title</h3>
-    <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadium.</p>
-    <p>Sic tempus fugit esperanto hiccup estrogen. Glorious baklava ex librus hup hey ad infinitum. Non sequitur condominium facile et geranium incognito. Epsum factorial non deposit quid pro quo hic escorol. Marquee selectus non provisio incongruous feline nolo contendre Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum.</p>
-  </section>
-  <section class="comments">
-    <h4>Comments</h4>
-    <div class="comment">
-      <p id="emojions_235kjhab">Elen sila lumenn omentilmo, Nae saian luume'. Cormamin lindua ele lle.</p>
-    </div>
-    <div class="comment">
-      <p>Li Europan lingues es membres del sam familie</p>
-    </div>
-    <div class="comment">
-      <p id="emojions_aslkdjfa">LOL</p>
-    </div>
-  </section>
+  <div class="wrapper">
+    <section class="header">
+      <h1>Emojions Example Supa-site!</h1>
+    </section>
+    <section class="article">
+      <h3>Article Title</h3>
+      <p>Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadium.</p>
+      <p>Sic tempus fugit esperanto hiccup estrogen. Glorious baklava ex librus hup hey ad infinitum. Non sequitur condominium facile et geranium incognito. Epsum factorial non deposit quid pro quo hic escorol. Marquee selectus non provisio incongruous feline nolo contendre Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum.</p>
+    </section>
+    <section class="comments">
+      <h4>Comments</h4>
+      <div class="comment">
+        <p id="emojions_235kjhab">Elen sila lumenn omentilmo, Nae saian luume'. Cormamin lindua ele lle.</p>
+      </div>
+      <div class="comment">
+        <p>Li Europan lingues es membres del sam familie</p>
+      </div>
+      <div class="comment">
+        <p id="emojions_aslkdjfa">LOL</p>
+      </div>
+    </section>
+  </div>
 
   <script type="text/javascript" src="./index.js"></script>
 </body>
