--- a/snippet/example.html
+++ b/snippet/example.html
@@ -114,6 +114,19 @@
     <ul class="comments">
       <h3>Comments</h3>
 
+      <li id ="emojion_asdf">
+        <div>
+          <span>Bart Simpson</span>
+          <span>2nd May 2017</span>
+        </div>
+
+        <div>
+          <p>This is a comment without <strong>any styles</strong> to show the Emojion bar 'as is'. </p>
+        </div>
+
+        <button>Reply</button>
+      </li>
+
       <li id="emojions_235kjhab" class="comment">
         <div class="comment__meta">
           <span class="comment__username">Homer Simpson</span>
