updated from ids to class

--- a/snippet/example.html
+++ b/snippet/example.html
@@ -114,7 +114,7 @@
     <ul class="comments">
       <h3>Comments</h3>
 
-      <li id ="emojion_asdf">
+      <li class="emojion_asdf">
         <div>
           <span>Bart Simpson</span>
           <span>2nd May 2017</span>
@@ -127,7 +127,7 @@
         <button>Reply</button>
       </li>
 
-      <li id="emojions_235kjhab" class="comment">
+      <li class="emojions_235kjhab comment">
         <div class="comment__meta">
           <span class="comment__username">Homer Simpson</span>
           <span class="comment__date-authored">3rd May 2017</span>
@@ -142,7 +142,7 @@
         </button>
       </li>
 
-      <li id="emojions_aslkdjfa" class="comment">
+      <li class="emojions_aslkdjfa comment">
         <div class="comment__meta">
           <span class="comment__username">Marge Simpson</span>
           <span class="comment__date-authored">5th May 2017</span>
@@ -151,7 +151,6 @@
         <div class="comment__content">
           <p>This comment also has the Emojion snippet appended. <strong>But, with a bit more content.</strong></p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil adipisci ratione in nulla deserunt maxime, dicta libero quod, distinctio, explicabo numquam quidem eum reprehenderit vel enim, facilis est non dolorem!</p>
-
         </div><!--
 
         --><button class="button comment__reply">
