Setup docker to run example site. WIP
still need this to update live when code changes locally.

--- a/snippet/backend/example.html
+++ b/snippet/backend/example.html
@@ -166,9 +166,9 @@
 
         <div class="comment__content">
           <p>This is a comment without the Emojion snippet.</p>
-        </div>
+        </div><!--
 
-        <button class="button comment__reply">
+        --><button class="button comment__reply">
           Reply
         </button>
       </li>
@@ -177,6 +177,6 @@
 
   </div>
 
-  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="/../index.js"></script>
 </body>
 </html>
