renaming + trying to get async working.

--- a/snippet/example.html
+++ b/snippet/example.html
@@ -158,19 +158,11 @@
         </button>
       </li>
 
-      <li class="comment comment--no-emojion-bar">
+      <li class="comment emojion-barilkajd">
         <div class="comment__meta">
           <span class="comment__username">Bart Simpson</span>
           <span class="comment__date-authored">2nd May 2017</span>
         </div>
-
-        <div class="comment__content">
-          <p>This is a comment without the Emojion snippet.</p>
-        </div><!--
-
-        --><button class="button comment__reply">
-          Reply
-        </button>
       </li>
 
     </ul>
