--- a/snippet/example.html
+++ b/snippet/example.html
@@ -97,7 +97,7 @@
   <div class="wrapper">
 
     <header>
-      <h1>Emojions Example Supa-site!</h1>
+      <h1>BY GOLLY IT WORKS</h1>
     </header>
 
     <article>
@@ -129,7 +129,7 @@
 
       <li class="emojions_235kjhab comment">
         <div class="comment__meta">
-          <span class="comment__username">Homer Simpson</span>
+          <span class="comment__username">Homer Shittimpson</span>
           <span class="comment__date-authored">3rd May 2017</span>
         </div>
 
@@ -158,25 +158,17 @@
         </button>
       </li>
 
-      <li class="comment comment--no-emojion-bar">
+      <li class="comment emojion-barilkajd">
         <div class="comment__meta">
           <span class="comment__username">Bart Simpson</span>
           <span class="comment__date-authored">2nd May 2017</span>
         </div>
-
-        <div class="comment__content">
-          <p>This is a comment without the Emojion snippet.</p>
-        </div><!--
-
-        --><button class="button comment__reply">
-          Reply
-        </button>
       </li>
 
     </ul>
 
   </div>
 
-  <script type="text/javascript" src="./index.js"></script>
+  <script type="text/javascript" src="/../index.js"></script>
 </body>
 </html>
