setup flask infrastructure

--- a/snippet/example.html
+++ b/snippet/example.html
@@ -169,6 +169,6 @@
 
   </div>
 
-  <script type="text/javascript" src="/../index.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
