--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,13 @@
 <!doctype html>
+<head>
+  <style>
+    input[type=checkbox] {
+      display: none;
+    }
+  </style>
+</head>
 <html style="font-size: 62.5%">
-  <body>
+  <body style="margin: 0">
     <div></div>
     <script src="elm.js"></script>
     <script>Elm.Main.embed(document.querySelector("div"));</script>
