--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Emojion picker</title>
+  <style>
+    input[type=checkbox] {
+      display: none;
+    }
+  </style>
   </head>
   <body>
     <div id="main"></div>
