The only commit that really matters

--- a/snippet/example.html
+++ b/snippet/example.html
@@ -97,7 +97,7 @@
   <div class="wrapper">
 
     <header>
-      <h1>BY GOLLY IT WORKS</h1>
+      <h1>MIHO AND CINDY ROCK</h1>
     </header>
 
     <article>
